<resources>
    <string name="app_name">Zap</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">433877157082557</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb433877157082557</string>
    <string name="user_tab_1">Profile</string>
    <string name="user_tab_2">My Cars</string>
    <string name="user_tab_3">Rented</string>
    <string name="user_tab_4">Cards</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="link_to_register">Not a member? Register to Zap!</string>
    <string name="link_to_login">Already registered. Login Me!</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="register">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="rent_breakdown">Hourly rent.\nBreakdown per transaction:\nService charge : 10%\nInsurance : 5%\nYour earnings : 85%</string>

</resources>
