<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/login_bg"
            android:scaleType="centerCrop"/>

        <android.support.v7.widget.CardView
            android:id="@+id/cvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#337c7c7c"
            android:animateLayoutChanges="true"
            android:layout_gravity="center">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <LinearLayout
                    android:id="@+id/layoutLoginOptions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/btnLoginFB"
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:paddingLeft="10dp"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:textAllCaps="true"
                        android:textSize="14sp"
                        android:layout_marginBottom="10dp"
                        android:background="#3B5998"
                        android:drawableLeft="@drawable/ic_facebook"
                        android:padding="10dp"
                        android:text="Continue with Facebook"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btnLoginGoogle"
                        android:padding="10dp"
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:drawableLeft="@drawable/ic_google"
                        android:text="Continue with Google"
                        android:background="#f5f5f5"
                        android:layout_marginBottom="10dp"/>

                    <Button
                        android:id="@+id/btnLoginEmail"
                        android:padding="10dp"
                        android:layout_marginBottom="10dp"
                        android:drawableLeft="@drawable/ic_email_white"
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:text="Continue with Email"
                        android:textColor="@color/white"
                        android:background="#b71c1c"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutEmailLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:visibility="gone"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/hint_email"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:background="@android:color/white"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"

                        android:background="@android:color/white"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black" />
                </android.support.design.widget.TextInputLayout>

                <!-- Login Button -->

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:background="@color/colorPrimary"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_login_reset_password"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dip"
                    android:background="@null"
                    android:maxLines="1"
                    android:textStyle="bold"
                    android:text="@string/forgot_password"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent" />

                <!-- Link to Login Screen -->

                <Button
                    android:id="@+id/btn_login_signup"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dip"
                    android:background="@null"
                    android:textStyle="bold"
                    android:text="@string/link_to_register"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />

                    <ImageView
                        android:id="@+id/btn_login_mail_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_left"/>
            </LinearLayout>

            </FrameLayout>

        </android.support.v7.widget.CardView>


    </FrameLayout>

    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/layoutEmailLogin"
        app:layout_constraintVertical_bias="0.017" />

</android.support.constraint.ConstraintLayout>